--- a/Mirko_v2/Mirko_v2.WindowsPhone/MainPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/MainPage.xaml
@@ -96,7 +96,7 @@
                             NavigateTo="Entry_NavigateTo"
                             Background="{ThemeResource AppHeaderBackground}"/>
 
-        <Pivot x:Name="pivot" 
+        <Pivot x:Name="MainPivot" 
                Grid.Row="1"
                Margin="0,-132.5,0,0"
                HorizontalAlignment="Stretch"
@@ -122,7 +122,7 @@
             <PivotItem
                 x:Uid="MirkoPivotItem"
                 Margin="10,-140,0,0"
-                Header="first"
+                Header="mirko"
                 Tag="0">
                 <ListView x:Name="MirkoListView"
                           ItemsSource="{Binding MirkoEntries}"
@@ -143,7 +143,7 @@
 
                     <ListView.Header>
                         <Rectangle Height="135"
-                                       Fill="Transparent" />
+                                   Fill="Transparent" />
                     </ListView.Header>
 
                     <ListView.Footer>
@@ -158,7 +158,7 @@
             <PivotItem
                 x:Uid="HotPivotItem"
                 Margin="10,-140,0,0"
-                Header="second"
+                Header="gorące"
                 Tag="1">
                 <ListView x:Name="HotListView"
                           ItemsSource="{Binding HotEntries}"
@@ -190,7 +190,7 @@
             <PivotItem
                 x:Uid="FavPivotItem"
                 Margin="10,-140,0,0"
-                Header="third"
+                Header="ulubione"
                 Tag="2">
                 <ListView x:Name="FavListView"
                           ItemsSource="{Binding FavEntries}"
@@ -221,7 +221,7 @@
             <PivotItem
                 x:Uid="MyPivotItem"
                 Margin="10,-140,0,0"
-                Header="fourth"
+                Header="mój wykop"
                 Tag="3">
                 <ListView x:Name="MyListView"
                           ItemsSource="{Binding MyEntries}"
@@ -250,19 +250,30 @@
     </Grid>
 
     <Page.BottomAppBar>
-        <CommandBar x:Name="appbar"
+        <CommandBar x:Name="AppBar"
                     Opacity="{StaticResource AppBarOpacity}"
                     ClosedDisplayMode="Compact">
 
             <CommandBar.Resources>
                 <Storyboard x:Name="AppBarAnimation">
-                    <DoubleAnimation Storyboard.TargetName="appbar"
+                    <DoubleAnimation Storyboard.TargetName="AppBar"
                                      Storyboard.TargetProperty="Opacity"
                                      From="0.0"
                                      To="{StaticResource AppBarOpacity}"
                                      Duration="0:0:0.5" />
                 </Storyboard>
             </CommandBar.Resources>
+
+            <AppBarButton Label="dodaj"
+                          Icon="Add"
+                          Command="{Binding AddNewEntryCommand}" />
+
+            <CommandBar.SecondaryCommands>
+                <AppBarButton Label="ustawienia"
+                              Command="{Binding SettingsCommand}"/>
+                <AppBarButton Label="wyloguj/zaloguj"
+                              Command="{Binding LogInOutCommand}"/>
+            </CommandBar.SecondaryCommands>
 
             <!--
             <AppBarButton x:Uid="RefreshAppBarButton" 
