--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
@@ -149,6 +149,13 @@
                    Foreground="{Binding EntryData.Voted, Converter={StaticResource UserVotedToBrush}}"
                    Visibility="{Binding EntryData.VoteCount, Converter={StaticResource CountToVisibility}, FallbackValue=Collapsed}">
                 <Run Text="+"/><Run Text="{Binding EntryData.VoteCount}" />
+            
+            <i:Interaction.Behaviors>
+                <core:EventTriggerBehavior EventName="Tapped">
+                    <core:InvokeCommandAction Command="{Binding VoteCommand}" />
+                </core:EventTriggerBehavior>                                           
+            </i:Interaction.Behaviors>
+            
         </TextBlock>
 
         <RichTextBlock x:Name="BodyRTB"
