--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
@@ -77,6 +77,7 @@
                                 Visibility="Collapsed"/>
 
                 <MenuFlyoutItem Foreground="{ThemeResource MenuFlyoutSeparator}"
+                                Tag="separator"
                                 Text="separator :)"/>
 
                 <MenuFlyoutItem Text="edytuj"
