--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
@@ -11,7 +11,12 @@
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400"
+    
+    IsTapEnabled="True"
+    IsDoubleTapEnabled="True"
+    Tapped="UserControl_Tapped"
+    DoubleTapped="UserControl_DoubleTapped">
 
     <!--
     <UserControl.Resources>
@@ -181,12 +186,12 @@
               Margin="5,0,0,0"
               HorizontalAlignment="Stretch"
               Background="Transparent"
-              Visibility="{Binding Path=EntryData.Embed, Converter={StaticResource NullToVisibility}}">
+              Visibility="{Binding Path=EmbedVM.EmbedData, Converter={StaticResource NullToVisibility}}">
             
             <controls:EntryEmbed x:Name="EmbedPreview"
                                  HorizontalAlignment="Left"
                                  NavigateTo="Embed_NavigateTo"
-                                 DataContext="{Binding EntryData.Embed}"/>
+                                 DataContext="{Binding EmbedVM}"/>
         </Grid>
 
         <Grid x:Name="RightSpacer"
