--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/EntryEmbed.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/EntryEmbed.xaml
@@ -6,15 +6,33 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Mirko_v2.Controls"
+    xmlns:i="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400"
+    
+    IsTapEnabled="True"
+    Tapped="UserControl_Tapped">   
 
     <Grid x:Name="EntryEmbedGrid"
           HorizontalAlignment="Stretch">
 
         <controls:CachedImage x:Name="Image"
-                              Uri="{Binding PreviewURL}"/>
+                              Uri="{Binding EmbedData.PreviewURL}"/>
+        
+        <MediaElement x:Name="MediaElement"
+                      MaxHeight="400"
+                      MaxWidth="400"
+                      Source="{Binding MediaElementSrc}"
+                      AutoPlay="True"
+                      IsLooping="True"
+                      AreTransportControlsEnabled="False"
+                      Stretch="Uniform"
+                      MediaOpened="MediaElement_MediaOpened"
+                      MediaFailed="MediaElement_MediaFailed"
+                      Tapped="MediaElement_Tapped"
+                      Visibility="{Binding MediaElementSrc, Converter={StaticResource NullToVisibility}}"/>
 
         <TextBlock x:Name="AttachmentTB"
                    Visibility="Collapsed"
