--- a/Mirko_v2/Mirko_v2.WindowsPhone/MainPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/MainPage.xaml
@@ -6,9 +6,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Mirko_v2.Controls"
+    xmlns:utils="using:Mirko_v2.Utils"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    DataContext="{Binding Main, Mode=OneWay, Source={StaticResource Locator}}">
+    DataContext="{Binding Main, Mode=OneWay, Source={StaticResource Locator}}"
+    utils:PageOrientation.SupportedOrientations="Portrait">
 
     <Grid x:Name="PivotPageGrid" 
           Margin="0,25.6,0,-24">
