--- a/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Converters.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Converters.xaml
@@ -20,5 +20,7 @@
     <converters:NotificationsCountToBrush x:Key="NotificationsCountToBrush" />
     <converters:NullToVisibility x:Key="NullToVisibility" />
     <converters:MoreThanOneToString x:Key="MoreThanOneToString" />
+    <converters:BoolInverter x:Key="BoolInverter" />
+    <converters:YouTubeApp x:Key="YouTubeApp" />
 
 </ResourceDictionary>
