--- a/Mirko_v2/Mirko_v2.WindowsPhone/MainPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/MainPage.xaml
@@ -128,6 +128,7 @@
                 Header="mirko"
                 Tag="0">
                 <controls:ListViewEx x:Name="MirkoListView"
+                                     AppBar="{Binding ElementName=AppBar}"
                                      ScrollingDown="ListView_ScrollingDown"
                                      ScrollingUp="ListView_ScrollingUp"
                                      ItemsSource="{Binding MirkoEntries}"
