Initial work on PM support.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/AppHeader.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/AppHeader.xaml
@@ -177,8 +177,14 @@
             </Grid>
 
             <Grid Margin="35,5,35,5"
-                  Background="Transparent"
-                  Tapped="PM_Tapped">
+                  Background="Transparent">
+
+                <i:Interaction.Behaviors>
+                    <core:EventTriggerBehavior EventName="Tapped">
+                        <core:InvokeCommandAction Command="{Binding PMTappedCommand}" />
+                    </core:EventTriggerBehavior>
+                </i:Interaction.Behaviors>
+
                 <TextBlock x:Name="PMTB"
                            Style="{StaticResource BodyTextBlockStyle}"
                            FontSize="28"
