--- a/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Converters.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Converters.xaml
@@ -23,5 +23,6 @@
     <converters:MoreThanOneToString x:Key="MoreThanOneToString" />
     <converters:BoolInverter x:Key="BoolInverter" />
     <converters:YouTubeApp x:Key="YouTubeApp" />
+    <converters:CountToBool x:Key="CountToBool" />
 
 </ResourceDictionary>
