--- a/Mirko_v2/Mirko_v2.WindowsPhone/EntryPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/EntryPage.xaml
@@ -23,34 +23,46 @@
                             Grid.Row="0"
                             Canvas.ZIndex="1"
                             Background="{ThemeResource AppHeaderBackground}"/>
-
-        <ListView x:Name="ListView"
-                  Grid.Row="1"
-                  Margin="0,-132.5,0,0"
-                  HorizontalAlignment="Stretch"
-                  ItemsSource="{Binding EntryData.Comments}"
-                  ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
-                  IsItemClickEnabled="False"
-                  VirtualizingStackPanel.VirtualizationMode="Recycling">
+        
+        <controls:ListViewEx x:Name="ListView"
+                             Grid.Row="1"
+                             Margin="0,-132.5,0,0"
+                             HorizontalAlignment="Stretch"
+                             AppBar="{Binding ElementName=AppBar}"
+                             ItemsSource="{Binding Comments}"
+                             ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
+                             IsItemClickEnabled="False"
+                             VirtualizingStackPanel.VirtualizationMode="Recycling">
             
             <ListView.Header>
-                <DataTemplate>
-                    <StackPanel>
-                        <Rectangle x:Name="HeaderSpacer"
-                                   Fill="Transparent"
-                                   Height="140"
-                                   Visibility="Visible" />
-                        <controls:Entry DataContext="{Binding}"/>
-                    </StackPanel>                
-                </DataTemplate>
+                <StackPanel Margin="0,0,0,0">
+                    <Rectangle x:Name="HeaderSpacer"
+                               Fill="Transparent"
+                               Height="140" />                    
+                    <controls:Entry DataContext="{Binding}"/>
+                </StackPanel>                
             </ListView.Header>
             
-        </ListView>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <controls:Entry DataContext="{Binding}"
+                                    IsTapEnabled="False"
+                                    ShowLeftSpacer="True"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+
+            <ListView.Footer>
+                <Rectangle x:Name="Footer"
+                       Fill="Transparent"
+                       Height="64" />
+            </ListView.Footer>
+
+        </controls:ListViewEx>
 
     </Grid>
     
     <Page.BottomAppBar>
-        <CommandBar>
+        <CommandBar x:Name="AppBar">
             
         </CommandBar>
     </Page.BottomAppBar>
