--- a/Mirko_v2/Mirko_v2.WindowsPhone/MainPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/MainPage.xaml
@@ -136,7 +136,7 @@
 
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <controls:Entry NavigateTo="Entry_NavigateTo" />
+                            <controls:Entry />
                         </DataTemplate>
                     </ListView.ItemTemplate>
 
@@ -172,8 +172,7 @@
 
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <controls:Entry NavigateTo="Entry_NavigateTo"
-                                            IsHot="True" />
+                            <controls:Entry IsHot="True" />
                         </DataTemplate>
                     </ListView.ItemTemplate>
 
@@ -204,7 +203,7 @@
 
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <controls:Entry NavigateTo="Entry_NavigateTo" />
+                            <controls:Entry />
                         </DataTemplate>
                     </ListView.ItemTemplate>
 
@@ -235,7 +234,7 @@
 
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <controls:Entry NavigateTo="Entry_NavigateTo" />
+                            <controls:Entry />
                         </DataTemplate>
                     </ListView.ItemTemplate>
 
